# threshold-zk-LHE

./: Cargo.toml  README.md
.github/workflows/: rust.yml
algebra/: Cargo.toml
algebra/benches/: ntt_bench.rs
algebra/examples/: field.rs
algebra/src/: decompose_basis.rs  derive.rs  lib.rs  primitive.rs  random.rs
algebra/src/error/: mod.rs
algebra/src/field/: mod.rs  ntt_fields.rs  prime_fields.rs
algebra/src/modulus/: mod.rs
algebra/src/modulus/barrett/: internal_macros.rs  mod.rs  ops.rs
algebra/src/modulus/powof2/: internal_macros.rs  mod.rs
algebra/src/modulus/shoup/: internal_macros.rs  mod.rs
algebra/src/polynomial/: mod.rs
algebra/src/polynomial/multivariate/: data_structures.rs  mod.rs
algebra/src/polynomial/multivariate/multilinear/: dense.rs  mod.rs
algebra/src/polynomial/univariate/: mod.rs  native_polynomial.rs  ntt_polynomial.rs
algebra/src/reduce/: lazy_ops.rs  mod.rs  ops.rs  primitive.rs
algebra/src/transformation/: mod.rs  ntt_table.rs
algebra/src/utils/: gcd.rs  mod.rs  prime.rs  reverse.rs  sample.rs
algebra/tests/: derive_test.rs  multivariate_test.rs  polynomial_test.rs
algebra_derive/: Cargo.toml
algebra_derive/src/: ast.rs  attr.rs  basic.rs  field.rs  lib.rs  ntt.rs  ops.rs  prime.rs  random.rs
bfv/: Cargo.toml  readme.md
bfv/benches/: bfv.rs  tpke.rs
bfv/src/: ciphertext.rs  context.rs  lib.rs  plaintext.rs  publickey.rs  scheme.rs  secretkey.rs  tpke.rs
bfv/tests/: bfv.rs  tpke.rs
