[package]
name = "bfv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }

num-traits = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = "0.3.1"
chacha20poly1305 = { workspace = true }
itybity = {workspace = true}

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bfv"
harness = false

[[bench]]
name = "tpke"
harness = false

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
